--- a/erpBackend/package.json
+++ b/erpBackend/package.json
@@ -19,6 +19,8 @@
     "nodemailer": "^6.4.17",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "sib-api-v3-sdk": "^8.0.2",
     "unirest": "^0.6.0",
     "validator": "^13.1.17"
